--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 Assets/Audio/BGAudio/Level1-Intro/FREE[[:space:]]1[[:space:]]HOUR[[:space:]]ESCAPE[[:space:]]ROOM[[:space:]]COUNTDOWN[[:space:]]WITH[[:space:]]MUSIC[[:space:]]-[[:space:]]ESCAPE[[:space:]]KIT.mp3 filter=lfs diff=lfs merge=lfs -text
+Assets/Horror_Mansion filter=lfs diff=lfs merge=lfs -text
