--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,12 @@
 Assets/Audio/BGAudio/Level1-Intro/FREE[[:space:]]1[[:space:]]HOUR[[:space:]]ESCAPE[[:space:]]ROOM[[:space:]]COUNTDOWN[[:space:]]WITH[[:space:]]MUSIC[[:space:]]-[[:space:]]ESCAPE[[:space:]]KIT.mp3 filter=lfs diff=lfs merge=lfs -text
 Assets/Horror_Mansion filter=lfs diff=lfs merge=lfs -text
+Assets/Horror_Mansion/Textures filter=lfs diff=lfs merge=lfs -text
+Assets/Horror_Mansion/Textures/Decals filter=lfs diff=lfs merge=lfs -text
+Assets/Horror_Mansion/Textures/Environment filter=lfs diff=lfs merge=lfs -text
+Assets/Horror_Mansion/Textures/House filter=lfs diff=lfs merge=lfs -text
+Assets/Horror_Mansion/Textures/Props filter=lfs diff=lfs merge=lfs -text
+Assets/Horror_Mansion/Textures/Terrain_Textures filter=lfs diff=lfs merge=lfs -text
+Assets/Horror_Mansion/Textures/Vegetation filter=lfs diff=lfs merge=lfs -text
+Assets/Horror_Mansion/Textures/HDRI.exr filter=lfs diff=lfs merge=lfs -text
+Assets/Horror_Mansion/Textures/Noise.tga filter=lfs diff=lfs merge=lfs -text
+Assets/Horror_Mansion/Textures/Sun_Mask.tga filter=lfs diff=lfs merge=lfs -text
